# boxtime-indexer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  ergo.conf  pyproject.toml
input/: erg_prices.csv
scripts/: snapshot.sh  status.sh
src/: config.py  csv_writer.py  db.py  fetcher.py  indexer.py  main.py  price_fetcher.py  status.py
tests/: test_config.py  test_csv_writer.py  test_fetcher.py  test_indexer.py  test_main.py  test_price_fetcher.py  test_status.py
