[project]
name = "boxtime-indexer"
version = "0.1.0"
description = "Cointime Economics ETL/indexer for the Ergo blockchain"
requires-python = ">= 3.12"
dependencies = [
    "aiohttp>=3.11,<4",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
boxtime-indexer = { path = ".", editable = true }
pytest = ">=8,<9"
pytest-asyncio = ">=0.24,<1"
aioresponses = ">=0.7,<1"

[tool.pixi.tasks]
start = "python -m src.main"
test = "pytest tests/ -v"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
